# score-addon-lsl

./: .gitmodules  CMakeLists.txt  score_addon_lsl.cpp  score_addon_lsl.hpp
LSL/: LSLDevice.cpp  LSLDevice.hpp  LSLProtocolFactory.cpp  LSLProtocolFactory.hpp  LSLProtocolSettingsWidget.cpp  LSLProtocolSettingsWidget.hpp  LSLSpecificSettings.hpp  LSLSpecificSettingsSerialization.cpp  lsl_context.cpp  lsl_context.hpp  lsl_protocol.cpp  lsl_protocol.hpp  lsl_structs.hpp
tests/: test_lsl_receiver.py  test_lsl_sender.py
